# reet

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
docs/: LLMLINGUA_ANALYSIS.md  RESEARCH_NOTES.md
reet/: __init__.py
reet/benchmarks/: __init__.py  base.py  metrics.py
reet/benchmarks/baselines/: __init__.py  base.py  llmlingua.py  truncation.py
reet/benchmarks/scbench/: __init__.py  data.py  evaluate.py
scripts/: run_scbench.py
