[project]
name = "reet"
version = "0.1.0"
description = "REET: Relevance-Engineered Efficient Tokens - Multi-turn context compression for LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohit Dhawan", email = "mohit@example.com"},
]
keywords = ["llm", "compression", "context", "agents", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
training = [
    "datasets>=2.14.0",
    "accelerate>=0.21.0",
    "wandb>=0.15.0",
    "openai>=1.0.0",
    "spacy>=3.5.0",
]
benchmarks = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
baselines = [
    "llmlingua>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "reet[training,benchmarks,baselines,dev]",
]

[project.urls]
Homepage = "https://github.com/Mohit-Dhawan98/reet"
Repository = "https://github.com/Mohit-Dhawan98/reet"
Documentation = "https://github.com/Mohit-Dhawan98/reet#readme"

[project.scripts]
reet-eval = "reet.benchmarks.evaluate:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reet*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
